layout/generic/nsPageContentFrame.h
@@ -87,6 +87,10 @@ protected:
   nsPageContentFrame(nsStyleContext* aContext) : ViewportFrame(aContext) {}
 
   nsSharedPageData*         mPD;
+
+private:
+  PRBool IsFixedPlaceholder(nsIFrame* aFrame);
+  nsFrameList StealFixedPlaceholders(nsIFrame* aDocRoot);
 };
 
 #endif /* nsPageContentFrame_h___ */
